# tetris

./: .gitignore  CMakeLists.txt  Makefile  fitting.c  fitting.h  main.c  main.h  parallel.c  parallel.h  stack.c  stack.h  state.c  state.h  tetris  tetris.c  tetris.h  zprava_original.lyx  zprava_original.lyx~
tests/: fitting_test.c  fitting_test.h  map_test.c  stack_test.c  stack_test.h  token_test.c
zprava/: #zprava.lyx#  zprava.lyx  zprava.lyx~
